JS Panneaux stylisés "Questions"

--- a/style.css
+++ b/style.css
@@ -382,3 +382,149 @@ main button {
   display: flex;
   justify-content: center;
 } 
+
+
+/* Avis */
+#avis {
+  position: relative;
+  background-color: #7fd1cc;
+}
+
+.avis-clients {
+  max-width: 1300px;
+}
+
+@media (max-width:499px) {
+  .info-offres {
+    width: 90%;
+    height: 100%;
+  }
+}
+
+
+/* Question */
+#questions {
+  width: 700px;
+  height: 600px;
+  background-color: #1692ab;
+  margin: 100px auto;
+  display: flex;
+  flex-direction: column;
+}
+.bloc {
+  height: 70px;
+  margin: 5px 5px 0px 5px;
+  background-color: white;
+  flex-grow: 1;
+  transition: 0.4s ease-out;
+  position: relative;
+  overflow: hidden;
+}
+.bloc:last-child {
+  margin-bottom: 5px;
+}
+.activer {
+  flex-grow: 10000;
+}
+.bloc * {
+  pointer-events: none;
+}
+.bloc-haut {
+  min-height: 70px;
+  background: #1692ab29;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
+.rond img {
+  margin-left: 20px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+.titre-question {
+  margin: 10px 25px;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+}
+.number-question {
+  font-family: 'Roboto', sans-serif;
+  font-size: 22px;
+  margin: 0 18px 0 10px;
+  font-weight: bold;
+}
+.contenu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.contenu p{
+  width: 90%;
+}
+.infos  {
+  font-family: 'Roboto', sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.infos p {
+  line-height: 140%;
+}
+.infos button{
+  padding: 10px 0px;
+  width: 225px;
+  border: none;
+  color: white;
+  background-color: #26aba3;
+  border-radius: 30px;
+  pointer-events: auto!important;
+}
+.infos button:activer {
+  transform: scale(0.95);
+}
+
+@media (max-width:993px) {
+  #questions {
+    width: 95%;
+  }
+}
+
+@media (max-width:769px) {
+  .titre-question {
+    font-size: 15px;
+  }
+  #questions {
+    margin: 50px auto;
+  }
+}
+
+@media (max-width:499px) {
+  #questions button {
+    display: none;
+  }
+  .bloc {
+    height: 90px;
+  }
+  .bloc-haut {
+    height: 90px;
+    margin-bottom: 20px;
+  }
+  .rond {
+    display: none;
+  }
+  .infos p {
+    font-size: 14px;
+  }
+}
+
+@media (max-width:350px) {
+  .titre-question {
+    font-size: 13px;
+  }
+  #questions {
+    height: 630px;
+  }
+}
