--- a/blog.css
+++ b/blog.css
@@ -43,12 +43,12 @@ position: relative;
   font-family: 'Roboto', sans-serif;
 }
 
-.bebas {
-  font-family: 'Bebas Neue', cursive;
-}
-
 #principale {
   background: linear-gradient(180deg, #bbe2e0,5%, rgb(255, 255, 255));
+}
+
+h1,h2,h3,h4,h5,h6 {
+  font-family: 'Bebas Neue', cursive;
 }
 
 /* Navbar */
@@ -72,7 +72,6 @@ margin-right: 5px;
 header h1 {
 display: flex;
 align-items: center;
-font-family: 'Bebas Neue', cursive;
 }
 header .menu {
   display: flex;
@@ -119,6 +118,10 @@ header .menu li a::after {
 }
 header .menu li a:hover::before, header .menu li a:hover::after {
   opacity: 1;
+}
+
+header .menu li:nth-child(5) a {
+  color: #e7ac52;
 }
 
 /* Responsive Navbar */
@@ -236,7 +239,6 @@ header .menu.responsive {
 
 #blog .container h2 {
   margin-bottom: 20px;
-  font-family: 'Bebas Neue', cursive;
 }
 
 #blog .container p {
@@ -254,6 +256,9 @@ header .menu.responsive {
   #blog .container .row {
     padding: 30px;
   }
+  #blog .container img {
+    height: 200px;
+  }
 }
 
 /* Footer */
@@ -263,7 +268,6 @@ footer {
   text-align: center;
 }
 footer h2 {
-  font-family: 'Bebas Neue', cursive;
   color: #1692ab;
 }
 footer p {
@@ -308,12 +312,13 @@ footer ul li a{
   font-family: 'Bebas Neue', cursive;
   font-size: 25px;
   cursor: pointer;
+  text-decoration: none;
+  color: black;
 }
-footer ul li:hover {
+footer ul li:hover a {
   color: #e7ac52;
-}
-footer ul li a:hover {
   background-color: #1692ab;
+  transition: 0s;
 }
 
 footer .copyright {
