--- a/propos.css
+++ b/propos.css
@@ -43,12 +43,12 @@ position: relative;
   font-family: 'Roboto', sans-serif;
 }
 
-.bebas {
-  font-family: 'Bebas Neue', cursive;
-}
-
 #principale {
   background: linear-gradient(180deg, #bbe2e0,5%, rgb(255, 255, 255));
+}
+
+h1,h2,h3,h4,h5,h6 {
+  font-family: 'Bebas Neue', cursive;
 }
 
 /* Navbar */
@@ -72,7 +72,6 @@ margin-right: 5px;
 header h1 {
 display: flex;
 align-items: center;
-font-family: 'Bebas Neue', cursive;
 }
 header .menu {
   display: flex;
@@ -119,6 +118,10 @@ header .menu li a::after {
 }
 header .menu li a:hover::before, header .menu li a:hover::after {
   opacity: 1;
+}
+
+header .menu li:nth-child(2) a {
+  color: #e7ac52;
 }
 
 /* Responsive Navbar */
@@ -219,20 +222,39 @@ header .menu.responsive {
 #conseils img {
   height: 400px;
   width: 400px;
-  border-radius: 50%;
+  box-shadow: 1px 1px 10  px 1px black;
 }
 
 #conseils button {
-  padding: 10px 0px;
+  border: none;
+  background-color: transparent;
+}
+
+#conseils button a {
+  padding: 10px 60px;
   width: 225px;
   border: none;
   color: white;
   background-color: #26aba3;
   border-radius: 30px;
+  text-decoration: none;
 }
 
-#conseils button:hover {
+#conseils button:hover a {
   background-color: #e7ac52;
+  color: black;
+}
+
+.num  {
+  font-family: 'Bebas Neue', cursive;
+  color: #e7ac52;
+  margin-bottom: 0;
+  font-size: 4rem;
+}
+
+.exp {
+  font-family: 'Bebas Neue', cursive;
+  font-size: 1.3rem;
 }
 
 @media (max-width:499px) {
@@ -240,8 +262,8 @@ header .menu.responsive {
     width: 265px;
     height: 265px;
   }
-  #conseils button {
-    padding: 10px 0px;
+  #conseils button a {
+    padding: 10px 30px;
   }
 }
 
@@ -256,7 +278,6 @@ header .menu.responsive {
 
 #diplomes h2 {
   text-align: center;
-  font-family: 'Bebas Neue', cursive;
 }
 
 .slider {
@@ -304,11 +325,11 @@ header .menu.responsive {
   padding: 50px;
 }
 
-/* @media (max-width:499px) {
+@media (max-width:499px) {
   #experience {
     padding: 30px;
   }
-} */
+}
 
 
 /* Photos */
@@ -337,6 +358,10 @@ header .menu.responsive {
   }
 }
 
+#conseils h2, #diplomes h2, #experience h2, #photos h2 {
+  font-size: 2.5rem;
+}
+
 
 /* Footer */
 footer {
@@ -345,7 +370,6 @@ footer {
   text-align: center;
 }
 footer h2 {
-  font-family: 'Bebas Neue', cursive;
   color: #1692ab;
 }
 footer p {
@@ -390,12 +414,13 @@ footer ul li a{
   font-family: 'Bebas Neue', cursive;
   font-size: 25px;
   cursor: pointer;
+  text-decoration: none;
+  color: black;
 }
-footer ul li:hover {
+footer ul li:hover a {
   color: #e7ac52;
-}
-footer ul li a:hover {
   background-color: #1692ab;
+  transition: 0s;
 }
 
 footer .copyright {
