--- a/services.css
+++ b/services.css
@@ -43,12 +43,12 @@ position: relative;
   font-family: 'Roboto', sans-serif;
 }
 
-.bebas {
-  font-family: 'Bebas Neue', cursive;
-}
-
 #principale {
   background: linear-gradient(180deg, #bbe2e0,5%, rgb(255, 255, 255));
+}
+
+h1,h2,h3,h4,h5,h6, .choix p {
+  font-family: 'Bebas Neue', cursive;
 }
 
 /* Navbar */
@@ -72,7 +72,6 @@ margin-right: 5px;
 header h1 {
 display: flex;
 align-items: center;
-font-family: 'Bebas Neue', cursive;
 }
 header .menu {
   display: flex;
@@ -119,6 +118,10 @@ header .menu li a::after {
 }
 header .menu li a:hover::before, header .menu li a:hover::after {
   opacity: 1;
+}
+
+header .menu li:nth-child(3) a {
+ color: #e7ac52;
 }
 
 /* Responsive Navbar */
@@ -215,33 +218,42 @@ main {
   min-height: 100vh;
 }
 
+main h3 {
+  color: #26aba3;
+}
+
 main .info {
   width: 250px;
   height: 250px;
-  background-color: rgb(240, 240, 240);
+  background-color: rgb(255, 255, 255);
+  box-shadow: 1px 1px 5px black;
   border-radius: 15px;
 }
 
 main button {
-  padding: 10px 0px;
+  border: none;
+  background-color: transparent;
+}
+
+main button a {
+  padding: 10px 60px;
   width: 225px;
   border: none;
   color: white;
   background-color: #26aba3;
   border-radius: 30px;
-}
-
-main button:hover {
-  background-color: #e7ac52;
-}
-
-main button a {
   text-decoration: none;
-  color: white;
 }
 
-main button a:hover {
-  color: white;
+main button:hover a {
+  background-color: #e7ac52;
+  color: black;
+}
+
+.etape {
+  font-size: 3rem;
+  color: #e7ac52;
+  font-family: 'Bebas Neue', cursive;
 }
 
 
@@ -266,7 +278,6 @@ main button a:hover {
 .info-offres img {
   height: 50px;
   width: 50px;
-  border-radius: 50%;
 }
 
 #offres button {
@@ -329,7 +340,6 @@ main button a:hover {
 
 .choix h3 {
   font-size: 30px;
-  font-family: 'Bebas Neue', cursive;
   font-weight: 600;
 }
 
@@ -356,10 +366,18 @@ main button a:hover {
   background-color: #e7ac52;
 }
 
+#tarifs button:hover a {
+  color: black;
+}
+
 #tarifs .centrer-row {
   display: flex;
   justify-content: center;
 } 
+
+#avis h2, #tarifs h2 {
+  font-size: 2.5rem;
+}
 
 
 /* Footer */
@@ -369,7 +387,6 @@ footer {
   text-align: center;
 }
 footer h2 {
-  font-family: 'Bebas Neue', cursive;
   color: #1692ab;
 }
 footer p {
@@ -414,12 +431,13 @@ footer ul li a{
   font-family: 'Bebas Neue', cursive;
   font-size: 25px;
   cursor: pointer;
+  text-decoration: none;
+  color: black;
 }
-footer ul li:hover {
+footer ul li:hover a {
   color: #e7ac52;
-}
-footer ul li a:hover {
   background-color: #1692ab;
+  transition: 0s;
 }
 
 footer .copyright {
